--- a/chart-app/package.json
+++ b/chart-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.21",
     "d3": "^7.9.0",
@@ -29,6 +30,6 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.6"
   }
 }
